[ taotao-cloud-project-1702 ] update[ version to 2023.04 ]